# ccdi-data-federation-rest

./: .env.example  .gitignore  .gitmodules  Dockerfile  README.md  app.js  docker-compose.yml  graphql-to-rest-design.md  jest.config.js  package-lock.json  package.json  postman_collection.json  pyproject.toml
app/: main.py
app/api/v1/routes/: health.py
app/core/: config.py  pagination.py
app/models/: errors.py
config/: logger.js  redis.js
db/: common.js  diagnosisRepository.js  fileRepository.js  infoRepository.js  metadataRepository.js  mockData.js  namespaceRepository.js  organizationRepository.js  sampleRepository.js  subjectRepository.js
graphql/: client.js  queries.js
lib/: cache.js  errorTypes.js  pagination.js
middleware/: errorHandler.js  rateLimiter.js  validation.js
routes/: file.js  health.js  index.js  info.js  metadata.js  namespace.js  organization.js  sample.js  sampleDiagnosis.js  subject.js  subjectDiagnosis.js
services/: diagnosisService.js  fileService.js  infoService.js  metadataService.js  namespaceService.js  organizationService.js  sampleService.js  subjectService.js
tests/: file.test.js  health.test.js  sample.test.js  setup.js  subject.test.js
tests/integration/: test_health.py
