[project]
name = "ccdi-data-federation-rest"
version = "0.1.0"
description = "CCDI Data Federation REST API (FastAPI implementation)"
authors = [{name = "CCDI"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi~=0.111.0",
    "uvicorn[standard]~=0.30.0",
    "pydantic~=2.7.0",
    "pydantic-settings~=2.2.1",
    "neo4j~=5.19.0",
    "python-dotenv~=1.0.1",
    "httpx~=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.2.0",
    "pytest-asyncio~=0.23.6",
    "anyio~=4.4.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
